<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_profile_rename"
        android:icon="@drawable/ic_edit_24px"
        android:title="@string/profile_rename" />
    <item
        android:id="@+id/action_profile_icon"
        android:icon="@drawable/ic_picon_palette"
        android:title="@string/profile_change_icon" />
    <item
        android:id="@+id/action_profile_tile"
        android:icon="@drawable/ic_picon_dashboard"
        android:title="@string/profile_add_tile" />
    <item
        android:id="@+id/action_profile_tile_remove"
        android:icon="@drawable/ic_picon_remove"
        android:title="@string/profile_remove_tile" />
    <item
        android:id="@+id/action_profile_update"
        android:icon="@drawable/content_copy_24px"
        android:title="@string/profile_update_to_current" />
    <item
        android:id="@+id/action_profile_automation"
        android:icon="@drawable/adb_24px"
        android:title="@string/profile_automation" />
    <item
        android:id="@+id/action_profile_delete"
        android:icon="@drawable/ic_delete_24px"
        android:title="@string/profile_delete" />
</menu>
