<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingTop="8dp"
    android:paddingBottom="16dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textFilteringNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/app_filtering_note"
        android:textAppearance="@style/TextAppearance.Material3.LabelMedium.Emphasized"
        android:textColor="@color/filtering_note" />

    <RadioGroup
        android:id="@+id/radioGroupSort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioInstallTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_install_time" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioNameAsc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_name_asc" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioNameDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_name_desc" />
    </RadioGroup>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkboxShowSystemApps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_system_apps" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkboxShowOtherProfiles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_other_profiles" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textOtherProfilesNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/show_other_profiles_description"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
        android:alpha="0.75" />


</LinearLayout>
