<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_font"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge.Emphasized"
        android:layout_marginBottom="16dp" />

    <RadioGroup
        android:id="@+id/fontRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/font_default"
            android:padding="12dp"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

        <RadioButton
            android:id="@+id/radio_ndot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/font_ndot"
            android:fontFamily="@font/ndot"
            android:padding="12dp"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancelFont"
            style="@style/Widget.Material3Expressive.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginEnd="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnApplyFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply" />

    </LinearLayout>

</LinearLayout>
